# adao

./: Cargo.toml
contracts/admin/: Cargo.toml
contracts/admin/schema/: contract.json
contracts/admin/src/: contract.rs  error.rs  exec.rs  msg.rs  state.rs
schema/raw/: execute.json
src/: contract.rs  error.rs  exec.rs  lib.rs  msg.rs  state.rs
