[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1", features = ["staking"] }
serde = { version = "1", default-features = false, features = ["derive"] }
cw-storage-plus = "1"
thiserror = "1"
schemars = "0.8"
cw-utils = "1"
cosmwasm-schema = "1"

[dev-dependencies]
cw-multi-test = "0"
